WindGroup Dev/src/objects/FM_Service_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Service_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Master</label>
        <referenceTo>Checklist_Master__c</referenceTo>
        <relationshipName>Service_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Service_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Service_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract_End_Date__c</fullName>
        <formula>Service_Contract_Start_Date__c + ( ( 365 / 12 ) *  Term__c )</formula>
        <label>Service Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Start_Date__c</fullName>
        <label>Service Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term (months)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FM Service Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FM Service Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>